--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -66,6 +66,11 @@ user-select:none;
 }
 #lightbox-prev{left:20px;}
 #lightbox-next{right:20px;}
+.no-scroll{
+overflow: hidden;
+position: fixed;
+width: 100%;
+}
 </style>
 </head>
 
@@ -91,13 +96,13 @@ For full Sandtex colour charts, scroll down to the chart at the bottom of the pa
 
 <!-- ORIGINAL HOUSE -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" width="800" height="500" loading="eager" onclick="openLightbox(0)">
+<img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" loading="eager" onclick="openLightbox(0)">
 <p>Original House</p>
 </div>
 
 <!-- CORNISH CREAM -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/cornish-cream.webp" alt="Sandtex Cornish Cream exterior paint" width="800" height="500" loading="lazy" onclick="openLightbox(1)">
+<img src="https://steely1968.github.io/images/cornish-cream.webp" alt="Sandtex Cornish Cream exterior paint" loading="lazy" onclick="openLightbox(1)">
 <h2>Cornish Cream – Sandtex</h2>
 <div class="description">
 Sandtex Cornish Cream is a soft, warm shade that instantly brightens any home exterior. This classic cream tone is ideal for traditional and modern homes alike, giving a welcoming, airy feel while subtly highlighting architectural details. Its lighter hue reflects sunlight beautifully, making properties appear larger and fresher without being stark.
@@ -111,7 +116,7 @@ As part of the Sandtex range, this colour also provides long-lasting protection 
 
 <!-- BITTER CHOCOLATE -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="Sandtex Bitter Chocolate exterior paint" width="800" height="500" loading="lazy" onclick="openLightbox(2)">
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="Sandtex Bitter Chocolate exterior paint" loading="lazy" onclick="openLightbox(2)">
 <h2>Bitter Chocolate – Sandtex</h2>
 <div class="description">
 Sandtex Bitter Chocolate is a deep, rich brown shade that gives homes a bold, dramatic and premium appearance. It works perfectly for larger properties, detached houses, or where a strong contrast with white or light-coloured features is desired.
@@ -125,7 +130,7 @@ Bitter Chocolate is extremely durable, with excellent resistance to rain, frost,
 
 <!-- VERMONT GREY -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/vermont-grey.webp" alt="Sandtex Vermont Grey exterior paint" width="800" height="500" loading="lazy" onclick="openLightbox(3)">
+<img src="https://steely1968.github.io/images/vermont-grey.webp" alt="Sandtex Vermont Grey exterior paint" loading="lazy" onclick="openLightbox(3)">
 <h2>Vermont Grey – Sandtex</h2>
 <div class="description">
 Sandtex Vermont Grey is a modern, neutral grey that offers a sleek and contemporary look. It’s perfect for homeowners seeking a subtle, sophisticated finish that complements any property style, whether new build or traditional.
@@ -139,7 +144,7 @@ As with all Sandtex products, Vermont Grey provides excellent weather resistance
 
 <!-- BRICK RED -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/brick-red.webp" alt="Sandtex Brick Red exterior paint" width="800" height="500" loading="lazy" onclick="openLightbox(4)">
+<img src="https://steely1968.github.io/images/brick-red.webp" alt="Sandtex Brick Red exterior paint" loading="lazy" onclick="openLightbox(4)">
 <h2>Brick Red – Sandtex</h2>
 <div class="description">
 Sandtex Brick Red is a bold, traditional colour that adds warmth and character to any property. It’s perfect for homeowners wanting a statement exterior that retains classic appeal. This rich red tone pairs exceptionally well with cream or white window frames, doors, and rooflines, enhancing architectural details.
@@ -153,7 +158,7 @@ This Sandtex finish also provides excellent weather resistance and durability, e
 
 <!-- OLIVE -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/olive.webp" alt="Sandtex Olive exterior paint" width="800" height="500" loading="lazy" onclick="openLightbox(5)">
+<img src="https://steely1968.github.io/images/olive.webp" alt="Sandtex Olive exterior paint" loading="lazy" onclick="openLightbox(5)">
 <h2>Olive – Sandtex</h2>
 <div class="description">
 Sandtex Olive is an earthy, natural colour that blends harmoniously with gardens, trees, and countryside surroundings. Ideal for homes in rural areas or for anyone seeking a calm, grounded aesthetic, it offers a unique alternative to traditional creams and greys.
@@ -165,15 +170,14 @@ As part of the Sandtex range, Olive offers long-lasting protection against frost
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
-<!-- NEW TITLE AND PARAGRAPH BEFORE CHART -->
+<!-- MORE COLOUR OPTIONS -->
 <h2>More Sandtex Colour Options</h2>
 <p>
 The chart below shows more Sandtex exterior colours, providing additional choices if the main examples above are not quite right for your home.
 </p>
 
-<!-- SANDTEX CHART -->
 <div class="colour-block" id="sandtex-chart">
-<img src="https://steely1968.github.io/images/sandtex-paint-chart-1.webp" alt="Sandtex exterior paint colour chart" width="800" height="500" loading="lazy" onclick="openLightbox(6)">
+<img src="https://steely1968.github.io/images/sandtex-paint-chart-1.webp" alt="Sandtex exterior paint colour chart" loading="lazy" onclick="openLightbox(6)">
 <p>Sandtex Colour Chart</p>
 </div>
 
@@ -214,18 +218,29 @@ const images = [
 ];
 
 let currentIndex = 0;
+let scrollPosition = 0;
 
 function openLightbox(index){
 currentIndex = index;
 const lb = document.getElementById('lightbox');
 const lbImg = document.getElementById('lightbox-img');
+
+// store scroll and disable background scroll
+scrollPosition = window.pageYOffset;
+document.body.style.top = `-${scrollPosition}px`;
+document.body.classList.add('no-scroll');
+
 lbImg.src = images[currentIndex];
 lb.style.display = 'flex';
 }
 
 function closeLightbox(){
-document.getElementById('lightbox').style.display = 'none';
+const lb = document.getElementById('lightbox');
+lb.style.display = 'none';
 document.getElementById('lightbox-img').src = '';
+document.body.classList.remove('no-scroll');
+document.body.style.top = '';
+window.scrollTo(0, scrollPosition);
 }
 
 function prevImage(){
