--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -36,6 +36,8 @@ padding:25px 15px;margin-top:40px;font-size:14px;
 }
 .footer-services{background:#000;padding:20px;text-align:center;margin-top:15px;}
 .footer-services a{color:#fff;margin:0 10px;}
+
+/* LIGHTBOX */
 #lightbox{
 display:none;
 position:fixed;
@@ -45,16 +47,28 @@ justify-content:center;align-items:center;
 z-index:9999;
 flex-direction:column;
 }
-#lightbox img{max-width:95%;max-height:80%;border-radius:6px;}
-#lightbox-close{position:absolute;top:20px;right:30px;font-size:40px;color:#fff;cursor:pointer;}
+#lightbox img{
+max-width:95%;
+max-height:80%;
+border-radius:6px;
+}
+#lightbox-close{
+position:absolute;
+top:20px;right:30px;font-size:40px;color:#fff;cursor:pointer;
+}
 #lightbox-prev,#lightbox-next{
-position:absolute;top:50%;transform:translateY(-50%);
-font-size:50px;color:#fff;cursor:pointer;padding:10px;user-select:none;
+position:absolute;
+top:50%;
+transform:translateY(-50%);
+font-size:50px;color:#fff;cursor:pointer;
+padding:10px;
+user-select:none;
 }
 #lightbox-prev{left:20px;}
 #lightbox-next{right:20px;}
 </style>
 </head>
+
 <body>
 
 <header>
@@ -75,13 +89,83 @@ For full Sandtex colour charts, scroll down to the chart at the bottom of the pa
 <a href="#sandtex-chart" style="color:#000;text-decoration:underline;">here</a>.
 </p>
 
+<!-- ORIGINAL HOUSE -->
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" loading="eager" onclick="openLightbox(0)">
 <p>Original House</p>
 </div>
 
-<!-- colour sections unchanged above this point -->
+<!-- CORNISH CREAM -->
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/cornish-cream.webp" alt="Sandtex Cornish Cream exterior paint" loading="lazy" onclick="openLightbox(1)">
+<h2>Cornish Cream – Sandtex</h2>
+<div class="description">
+Sandtex Cornish Cream is a soft, warm shade that instantly brightens any home exterior. This classic cream tone is ideal for traditional and modern homes alike, giving a welcoming, airy feel while subtly highlighting architectural details. Its lighter hue reflects sunlight beautifully, making properties appear larger and fresher without being stark.
 
+Cornish Cream pairs beautifully with white or grey window frames, doors and rooflines, enhancing the overall curb appeal. It suits a variety of surfaces including brick, render, pebble dash, and stone, while hiding dirt and weather marks better than pure white.
+
+As part of the Sandtex range, this colour also provides long-lasting protection against rain, frost, and sunlight. It’s breathable, water-resistant, and durable, making it a practical choice as well as an aesthetically pleasing one. Cornish Cream remains a popular choice for homeowners seeking a timeless, elegant finish.
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
+</div>
+
+<!-- BITTER CHOCOLATE -->
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="Sandtex Bitter Chocolate exterior paint" loading="lazy" onclick="openLightbox(2)">
+<h2>Bitter Chocolate – Sandtex</h2>
+<div class="description">
+Sandtex Bitter Chocolate is a deep, rich brown shade that gives homes a bold, dramatic and premium appearance. It works perfectly for larger properties, detached houses, or where a strong contrast with white or light-coloured features is desired.
+
+This dark, earthy tone pairs beautifully with wooden fences, stone details, and white, cream, or grey window frames. It adds depth and a sense of solidity, giving your home a grounded, high-end feel. Unlike black, it retains warmth and works in both modern and traditional settings.
+
+Bitter Chocolate is extremely durable, with excellent resistance to rain, frost, and sunlight. As part of the Sandtex range, it ensures the exterior looks striking while remaining protected for many years, combining style with practicality.
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
+</div>
+
+<!-- VERMONT GREY -->
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/vermont-grey.webp" alt="Sandtex Vermont Grey exterior paint" loading="lazy" onclick="openLightbox(3)">
+<h2>Vermont Grey – Sandtex</h2>
+<div class="description">
+Sandtex Vermont Grey is a modern, neutral grey that offers a sleek and contemporary look. It’s perfect for homeowners seeking a subtle, sophisticated finish that complements any property style, whether new build or traditional.
+
+The balanced grey tone harmonises with black, white, or anthracite window frames and doors, providing a clean, elegant contrast. It works beautifully on brick, render, pebble dash, and stone, giving a polished, professional appearance. Vermont Grey also hides everyday dirt better than lighter shades while maintaining a crisp, smart finish.
+
+As with all Sandtex products, Vermont Grey provides excellent weather resistance and long-lasting protection against frost, rain, and sun, ensuring your home remains stylish and well-maintained for years to come.
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
+</div>
+
+<!-- BRICK RED -->
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/brick-red.webp" alt="Sandtex Brick Red exterior paint" loading="lazy" onclick="openLightbox(4)">
+<h2>Brick Red – Sandtex</h2>
+<div class="description">
+Sandtex Brick Red is a bold, traditional colour that adds warmth and character to any property. It’s perfect for homeowners wanting a statement exterior that retains classic appeal. This rich red tone pairs exceptionally well with cream or white window frames, doors, and rooflines, enhancing architectural details.
+
+Brick Red suits a variety of surfaces including render, brick, and pebble dash. It adds depth and a welcoming feel to terraces, cottages, and detached homes alike. It works in rural or urban settings, helping properties stand out without looking garish.
+
+This Sandtex finish also provides excellent weather resistance and durability, ensuring your home maintains its striking appearance despite exposure to rain, frost, and sunlight. Brick Red combines traditional charm with practical protection for long-lasting beauty.
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
+</div>
+
+<!-- OLIVE -->
+<div class="colour-block">
+<img src="https://steely1968.github.io/images/olive.webp" alt="Sandtex Olive exterior paint" loading="lazy" onclick="openLightbox(5)">
+<h2>Olive – Sandtex</h2>
+<div class="description">
+Sandtex Olive is an earthy, natural colour that blends harmoniously with gardens, trees, and countryside surroundings. Ideal for homes in rural areas or for anyone seeking a calm, grounded aesthetic, it offers a unique alternative to traditional creams and greys.
+
+Olive pairs beautifully with stonework, wooden fences, and brown or cream window frames, creating a cohesive, natural look. Its muted tone adds sophistication without overpowering the property and complements landscaping perfectly.
+
+As part of the Sandtex range, Olive offers long-lasting protection against frost, rain, and sunlight while remaining breathable and weather-resistant. This ensures your home looks stylish and well-maintained year after year, combining natural beauty with practical durability.
+</div>
+<a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
+</div>
+
+<!-- MORE COLOUR OPTIONS -->
 <h2>More Sandtex Colour Options</h2>
 <p>
 The chart below shows more Sandtex exterior colours, providing additional choices if the main examples above are not quite right for your home.
@@ -92,14 +176,14 @@ The chart below shows more Sandtex exterior colours, providing additional choice
 <p>Sandtex Colour Chart</p>
 </div>
 
-<!-- NEW SECOND CHART -->
 <div class="colour-block">
-<img src="https://steely1968.github.io/images/colour-chart-2.webp" alt="Sandtex second exterior paint colour chart" loading="lazy" onclick="openLightbox(7)">
+<img src="https://steely1968.github.io/images/colour-chart-2.webp" alt="Second Sandtex exterior paint colour chart" loading="lazy" onclick="openLightbox(7)">
 <p>More Sandtex Colours</p>
 </div>
 
 <p style="text-align:center;">Home Repairs 4U proudly serves Askern and surrounding areas within 6 miles.</p>
 <a href="tel:07735873694" class="call-btn" style="display:block;text-align:center;">📞 Call Now: 07735 873694</a>
+
 </main>
 
 <footer class="site-footer">
@@ -114,6 +198,7 @@ The chart below shows more Sandtex exterior colours, providing additional choice
 </div>
 </footer>
 
+<!-- LIGHTBOX WITH NAVIGATION -->
 <div id="lightbox">
 <span id="lightbox-close" onclick="closeLightbox()">×</span>
 <span id="lightbox-prev" onclick="prevImage()">&#10094;</span>
@@ -138,20 +223,30 @@ let scrollPosition = 0;
 
 function openLightbox(index){
 currentIndex = index;
+const lb = document.getElementById('lightbox');
+const lbImg = document.getElementById('lightbox-img');
+
 scrollPosition = window.pageYOffset;
 document.body.style.overflow = 'hidden';
-document.getElementById('lightbox-img').src = images[currentIndex];
-document.getElementById('lightbox').style.display = 'flex';
+
+lbImg.src = images[currentIndex];
+lb.style.display = 'flex';
 }
+
 function closeLightbox(){
-document.getElementById('lightbox').style.display = 'none';
+const lb = document.getElementById('lightbox');
+lb.style.display = 'none';
+document.getElementById('lightbox-img').src = '';
+
 document.body.style.overflow = '';
 window.scrollTo(0, scrollPosition);
 }
+
 function prevImage(){
 currentIndex = (currentIndex - 1 + images.length) % images.length;
 document.getElementById('lightbox-img').src = images[currentIndex];
 }
+
 function nextImage(){
 currentIndex = (currentIndex + 1) % images.length;
 document.getElementById('lightbox-img').src = images[currentIndex];
