--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -94,6 +94,13 @@ For full Sandtex colour charts, scroll down to the chart at the bottom of the pa
 <img src="https://steely1968.github.io/images/house-to-paint.webp" alt="Original house before painting" loading="eager" onclick="openLightbox(0)">
 <p>Original House</p>
 </div>
+  <p class="description">
+This image shows a typical exterior that has become tired, dirty and run down over time. This is how we would normally approach a house like this. First, we would start by cleaning and repairing the guttering and downpipes to ensure water is draining correctly. At the same time, we would restore the uPVC so it looks clean, bright and refreshed again.
+
+Next, the exterior would be treated with a fungicidal wash to kill off moss, algae and mould that can grow on painted surfaces. In this case, sealing would not be required because the house has already been painted in the past and the surface is still sound.
+
+After that, we would repair any small damage, such as filling old cable holes, fixing minor cracks in the walls and tidying up rough areas. Finally, we would paint the entire exterior, transforming the property from dull and worn into a fresh, clean and smart-looking home.
+</p>
 
 <!-- CORNISH CREAM -->
 <div class="colour-block">
