--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -15,44 +15,22 @@
 body{margin:0;font-family:Arial,sans-serif;color:#222;}
 header{text-align:center;padding:25px 10px;background:#fff;border-bottom:4px solid #27ae60;}
 .logo{max-height:90px;width:auto;}
-.call-btn,.quote-btn{
-display:inline-block;margin-top:18px;padding:14px 28px;
-background:#000;color:#fff;font-size:18px;text-decoration:none;
-font-weight:bold;border-radius:6px;border:2px solid #000;
-}
-.call-btn:hover,.quote-btn:hover{background:#333;color:#fff;}
+.call-btn,.quote-btn{display:inline-block;margin-top:18px;padding:14px 28px;background:#000;color:#fff;font-size:18px;text-decoration:none;font-weight:bold;border-radius:6px;border:2px solid #000;}
+.call-btn:hover,.quote-btn:hover{background:#333;}
 main{max-width:900px;margin:40px auto;padding:0 15px;}
-h1{text-align:center;}
-h2{text-align:center;margin-top:30px;}
+h1,h2{text-align:center;}
 .colour-block{text-align:center;margin-bottom:50px;}
-.colour-block img{
-width:100%;height:auto;border-radius:6px;border:2px solid #ddd;
-cursor:zoom-in;
-}
+.colour-block img{width:100%;height:auto;border-radius:6px;border:2px solid #ddd;cursor:zoom-in;}
 .description{max-width:800px;margin:15px auto;text-align:left;}
-.site-footer{
-background:#000;color:#fff;text-align:center;
-padding:25px 15px;margin-top:40px;font-size:14px;
-}
+.site-footer{background:#000;color:#fff;text-align:center;padding:25px 15px;margin-top:40px;font-size:14px;}
 .footer-services{background:#000;padding:20px;text-align:center;margin-top:15px;}
 .footer-services a{color:#fff;margin:0 10px;}
 
-#lightbox{
-display:none;
-position:fixed;
-top:0;left:0;width:100%;height:100%;
-background:rgba(0,0,0,0.9);
-justify-content:center;align-items:center;
-z-index:9999;
-flex-direction:column;
-}
+/* LIGHTBOX */
+#lightbox{display:none;position:fixed;top:0;left:0;width:100%;height:100%;background:rgba(0,0,0,0.9);justify-content:center;align-items:center;z-index:9999;flex-direction:column;}
 #lightbox img{max-width:95%;max-height:80%;border-radius:6px;}
 #lightbox-close{position:absolute;top:20px;right:30px;font-size:40px;color:#fff;cursor:pointer;}
-#lightbox-prev,#lightbox-next{
-position:absolute;top:50%;transform:translateY(-50%);
-font-size:50px;color:#fff;cursor:pointer;padding:10px;
-user-select:none;
-}
+#lightbox-prev,#lightbox-next{position:absolute;top:50%;transform:translateY(-50%);font-size:50px;color:#fff;cursor:pointer;padding:10px;}
 #lightbox-prev{left:20px;}
 #lightbox-next{right:20px;}
 </style>
@@ -85,9 +63,9 @@ For full Sandtex colour charts, scroll down to the chart at the bottom of the pa
 <p class="description">
 This image shows a typical exterior that has become tired, dirty and run down over time. This is how we would normally approach a house like this. First, we would start by cleaning and repairing the guttering and downpipes to ensure water is draining correctly. At the same time, we would restore the uPVC so it looks clean, bright and refreshed again.
 
-Next, the exterior would be treated with a fungicidal wash to kill off moss, algae and mould that can grow on painted surfaces. In this case, sealing would not be required because the house has already been painted in the past and the surface is still sound.
+Next, the exterior would be treated with a fungicidal wash to kill off moss, algae and mould. In this case, sealing would not be required because the house has already been painted and the surface is still sound.
 
-After that, we would repair any small damage, such as filling old cable holes, fixing minor cracks in the walls and tidying up rough areas. Finally, we would paint the entire exterior, transforming the property from dull and worn into a fresh, clean and smart-looking home.
+After that, we would repair small damage such as old cable holes and cracks before finally painting and transforming the home.
 </p>
 </div>
 
@@ -95,7 +73,13 @@ After that, we would repair any small damage, such as filling old cable holes, f
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/cornish-cream.webp" alt="Sandtex Cornish Cream exterior paint" width="900" height="600" loading="lazy" decoding="async" onclick="openLightbox(1)">
 <h2>Cornish Cream – Sandtex</h2>
-<div class="description">[unchanged description]</div>
+<div class="description">
+Sandtex Cornish Cream is a soft, warm shade that instantly brightens any home exterior. This classic cream tone is ideal for traditional and modern homes alike, giving a welcoming, airy feel while subtly highlighting architectural details. Its lighter hue reflects sunlight beautifully, making properties appear larger and fresher without being stark.
+
+Cornish Cream pairs beautifully with white or grey window frames, doors and rooflines, enhancing the overall curb appeal. It suits a variety of surfaces including brick, render, pebble dash, and stone, while hiding dirt and weather marks better than pure white.
+
+As part of the Sandtex range, this colour also provides long-lasting protection against rain, frost, and sunlight. It’s breathable, water-resistant, and durable, making it a practical choice as well as an aesthetically pleasing one. Cornish Cream remains a popular choice for homeowners seeking a timeless, elegant finish.
+</div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
@@ -103,7 +87,13 @@ After that, we would repair any small damage, such as filling old cable holes, f
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/bitter-chocolate.webp" alt="Sandtex Bitter Chocolate exterior paint" width="900" height="600" loading="lazy" decoding="async" onclick="openLightbox(2)">
 <h2>Bitter Chocolate – Sandtex</h2>
-<div class="description">[unchanged description]</div>
+<div class="description">
+Sandtex Bitter Chocolate is a deep, rich brown shade that gives homes a bold, dramatic and premium appearance. It works perfectly for larger properties, detached houses, or where a strong contrast with white or light-coloured features is desired.
+
+This dark, earthy tone pairs beautifully with wooden fences, stone details, and white, cream, or grey window frames. It adds depth and a sense of solidity, giving your home a grounded, high-end feel. Unlike black, it retains warmth and works in both modern and traditional settings.
+
+Bitter Chocolate is extremely durable, with excellent resistance to rain, frost, and sunlight. As part of the Sandtex range, it ensures the exterior looks striking while remaining protected for many years, combining style with practicality.
+</div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
@@ -111,7 +101,13 @@ After that, we would repair any small damage, such as filling old cable holes, f
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/vermont-grey.webp" alt="Sandtex Vermont Grey exterior paint" width="900" height="600" loading="lazy" decoding="async" onclick="openLightbox(3)">
 <h2>Vermont Grey – Sandtex</h2>
-<div class="description">[unchanged description]</div>
+<div class="description">
+Sandtex Vermont Grey is a modern, neutral grey that offers a sleek and contemporary look. It’s perfect for homeowners seeking a subtle, sophisticated finish that complements any property style, whether new build or traditional.
+
+The balanced grey tone harmonises with black, white, or anthracite window frames and doors, providing a clean, elegant contrast. It works beautifully on brick, render, pebble dash, and stone, giving a polished, professional appearance. Vermont Grey also hides everyday dirt better than lighter shades while maintaining a crisp, smart finish.
+
+As with all Sandtex products, Vermont Grey provides excellent weather resistance and long-lasting protection against frost, rain, and sun, ensuring your home remains stylish and well-maintained for years to come.
+</div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
@@ -119,7 +115,13 @@ After that, we would repair any small damage, such as filling old cable holes, f
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/brick-red.webp" alt="Sandtex Brick Red exterior paint" width="900" height="600" loading="lazy" decoding="async" onclick="openLightbox(4)">
 <h2>Brick Red – Sandtex</h2>
-<div class="description">[unchanged description]</div>
+<div class="description">
+Sandtex Brick Red is a bold, traditional colour that adds warmth and character to any property. It’s perfect for homeowners wanting a statement exterior that retains classic appeal. This rich red tone pairs exceptionally well with cream or white window frames, doors, and rooflines, enhancing architectural details.
+
+Brick Red suits a variety of surfaces including render, brick, and pebble dash. It adds depth and a welcoming feel to terraces, cottages, and detached homes alike. It works in rural or urban settings, helping properties stand out without looking garish.
+
+This Sandtex finish also provides excellent weather resistance and durability, ensuring your home maintains its striking appearance despite exposure to rain, frost, and sunlight. Brick Red combines traditional charm with practical protection for long-lasting beauty.
+</div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
@@ -127,12 +129,21 @@ After that, we would repair any small damage, such as filling old cable holes, f
 <div class="colour-block">
 <img src="https://steely1968.github.io/images/olive.webp" alt="Sandtex Olive exterior paint" width="900" height="600" loading="lazy" decoding="async" onclick="openLightbox(5)">
 <h2>Olive – Sandtex</h2>
-<div class="description">[unchanged description]</div>
+<div class="description">
+Sandtex Olive is an earthy, natural colour that blends harmoniously with gardens, trees, and countryside surroundings. Ideal for homes in rural areas or for anyone seeking a calm, grounded aesthetic, it offers a unique alternative to traditional creams and greys.
+
+Olive pairs beautifully with stonework, wooden fences, and brown or cream window frames, creating a cohesive, natural look. Its muted tone adds sophistication without overpowering the property and complements landscaping perfectly.
+
+As part of the Sandtex range, Olive offers long-lasting protection against frost, rain, and sunlight while remaining breathable and weather-resistant. This ensures your home looks stylish and well-maintained year after year, combining natural beauty with practical durability.
+</div>
 <a href="https://homerepairs4u.com/quotes/house-painting.html" class="quote-btn">Get a Quote</a>
 </div>
 
+<!-- MORE COLOUR OPTIONS -->
 <h2>More Sandtex Colour Options</h2>
-<p>The chart below shows more Sandtex exterior colours.</p>
+<p style="text-align:center;">
+The chart below shows more Sandtex exterior colours, providing additional choices if the main examples above are not quite right for your home.
+</p>
 
 <div class="colour-block" id="sandtex-chart">
 <img src="https://steely1968.github.io/images/sandtex-paint-chart-1.webp" alt="Sandtex exterior paint colour chart" width="900" height="600" loading="lazy" decoding="async" onclick="openLightbox(6)">
@@ -146,6 +157,7 @@ After that, we would repair any small damage, such as filling old cable holes, f
 
 <p style="text-align:center;">Home Repairs 4U proudly serves Askern and surrounding areas within 6 miles.</p>
 <a href="tel:07735873694" class="call-btn" style="display:block;text-align:center;">📞 Call Now: 07735 873694</a>
+
 </main>
 
 <footer class="site-footer">
@@ -160,6 +172,7 @@ After that, we would repair any small damage, such as filling old cable holes, f
 </div>
 </footer>
 
+<!-- LIGHTBOX -->
 <div id="lightbox">
 <span id="lightbox-close" onclick="closeLightbox()">×</span>
 <span id="lightbox-prev" onclick="prevImage()">&#10094;</span>
@@ -183,6 +196,33 @@ function openLightbox(i){currentIndex=i;scrollPosition=window.pageYOffset;docume
 function closeLightbox(){document.getElementById('lightbox').style.display='none';document.body.style.overflow='';window.scrollTo(0,scrollPosition);}
 function prevImage(){currentIndex=(currentIndex-1+images.length)%images.length;document.getElementById('lightbox-img').src=images[currentIndex];}
 function nextImage(){currentIndex=(currentIndex+1)%images.length;document.getElementById('lightbox-img').src=images[currentIndex];}
+</script>
+
+<!-- SCHEMA -->
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"LocalBusiness",
+"name":"Home Repairs 4U",
+"telephone":"07735873694",
+"address":{"@type":"PostalAddress","addressLocality":"Askern","postalCode":"DN6","addressCountry":"GB"},
+"areaServed":"Askern DN6 and surrounding areas within 6 miles",
+"url":"https://homerepairs4u.com",
+"description":"Exterior house painting in Askern and surrounding areas within a 6 mile radius using Sandtex paints."
+}
+</script>
+
+<script type="application/ld+json">
+{
+"@context":"https://schema.org",
+"@type":"FAQPage",
+"mainEntity":[
+{"@type":"Question","name":"What paint do you use?","acceptedAnswer":{"@type":"Answer","text":"We mainly use Sandtex exterior paints for long lasting protection."}},
+{"@type":"Question","name":"Do you prepare before painting?","acceptedAnswer":{"@type":"Answer","text":"Yes, including cleaning, repairs, fungicidal treatment if needed and surface preparation."}},
+{"@type":"Question","name":"What areas do you cover?","acceptedAnswer":{"@type":"Answer","text":"We are based in Askern DN6 and cover around a 6 mile radius."}},
+{"@type":"Question","name":"How do I get a quote?","acceptedAnswer":{"@type":"Answer","text":"Call us on 07735 873694 or use our online quote pages."}}
+]
+}
 </script>
 
 </body>
