--- a/quotes/colour-range.html
+++ b/quotes/colour-range.html
@@ -51,7 +51,7 @@ h1,h2{text-align:center;}
 <h1>Exterior House Paint Colours</h1>
 
 <p style="max-width:800px;margin:15px auto;text-align:center;">
-We are showing the same house painted in several trending colours so you can see the contrasting differences clearly.
+We are showing an example image of the the same house painted in the top 5 trending colours so you can see the contrasting differences clearly.
 For full Sandtex colour charts, scroll down to the chart at the bottom of the page by clicking
 <a href="#sandtex-chart" style="color:#000;text-decoration:underline;">here</a>.
 </p>
