--- a/test.html
+++ b/test.html
@@ -1,351 +1,60 @@
 <!DOCTYPE html>
-<html lang="en-GB">
+<html>
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width,initial-scale=1">
-<title>External Property Makeover Calculator | Home Repairs 4U</title>
-<meta name="description" content="Use our External Property Makeover Calculator to get an instant estimate for exterior painting, guttering, uPVC restoration, pressure washing, and fence installation in Doncaster.">
-<link rel="icon" href="/favicon.png" type="image/png">
-<link rel="preload" as="image" href="/images/logo.webp" />
-
+<title>Postcode Lookup</title>
 <style>
-body{
-margin:0;
-padding:0;
-font-family:Arial, sans-serif;
-background:#f9f9f9;
-color:#222;
-line-height:1.65;
-}
-header{
-text-align:center;
-padding:25px 10px;
-background:#fff;
-border-bottom:4px solid #27ae60;
-}
-.logo{
-max-height:90px;
-width:auto;
-}
-.call-btn{
-display:inline-block;
-margin-top:18px;
-padding:14px 28px;
-background:#000;
-color:#fff;
-font-size:19px;
-text-decoration:none;
-font-weight:bold;
-border-radius:6px;
-border:2px solid #000;
-}
-.call-btn:hover{
-background:#333;
-}
-main{
-max-width:950px;
-margin:0 auto;
-background:#fff;
-padding:30px 20px;
-}
-h1,h2,h3{color:#111;}
-label{display:block;margin:8px 0;}
-input[type="number"],select{width:240px;padding:6px; margin-bottom:12px;}
-button{
-margin-top:20px;
-background:#000;
-color:#fff;
-border:none;
-padding:15px 30px;
-font-size:18px;
-border-radius:6px;
-cursor:pointer;
-font-weight:bold;
-display:block;
-}
-button:hover{background:#333;}
-.result{
-margin-top:30px;
-padding:25px;
-background:#eef7f0;
-border-radius:6px;
-font-size:18px;
-}
-.small{font-size:14px;color:#555;}
-.extra-group{
-background:#fafafa;
-padding:15px;
-border-radius:5px;
-margin-top:15px;
-}
-.optional-title{
-background:#000;
-color:#fff;
-padding:8px;
-border-radius:4px;
-margin-top:20px;
-}
+body { font-family: Arial, sans-serif; margin: 40px; background-color: #f9f9f9; }
+h2 { color: #333; }
+input { padding: 10px; width: 250px; font-size: 16px; border: 1px solid #ccc; border-radius: 4px; }
+button { padding: 10px 15px; font-size: 16px; margin-left: 5px; border: none; border-radius: 4px; background-color: #4CAF50; color: white; cursor: pointer; }
+button:hover { background-color: #45a049; }
+#result { margin-top: 20px; font-weight: bold; font-size: 18px; }
+#notfound { color: red; }
+#found { color: green; }
 </style>
-
-<!-- FAQ Schema -->
-<script type="application/ld+json">
-{
-"@context": "https://schema.org",
-"@type": "FAQPage",
-"mainEntity": [
-{
-"@type": "Question",
-"name": "How does the calculator work?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "Select your property type, number of bedrooms, conservatory details, storeys, and optional services. The calculator provides an instant estimated cost for your property makeover."
-}
-},
-{
-"@type": "Question",
-"name": "Which services are optional?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "All services such as Exterior Painting, Guttering, UPVC Restoration, Pressure Washing, and Fence Installation are optional. You can leave any service blank if not required."
-}
-},
-{
-"@type": "Question",
-"name": "Is the quote from this calculator final?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "The quote is an estimate. Final prices may vary based on site inspection and specific requirements."
-}
-},
-{
-"@type": "Question",
-"name": "Which areas does this calculator cover?",
-"acceptedAnswer": {
-"@type": "Answer",
-"text": "This calculator provides estimates for properties in Doncaster and surrounding areas."
-}
-}
-]
-}
-</script>
-
 </head>
-
 <body>
 
-<!-- HEADER -->
-<header>
-<img src="/images/logo.webp" alt="Home Repairs 4U logo" class="logo" width="600" height="200" loading="eager">
-<div style="text-align:center; margin-top:10px;">
-<a href="https://steely1968.github.io/" style="font-size:20px; color:#000; text-decoration:none; font-weight:600;">Home</a>
-</div>
-<br>
-<a href="tel:07735873694" class="call-btn">📞 Call Now: 07735 873694</a>
-</header>
+<h2>Enter Your Postcode:</h2>
+<input type="text" id="postcodeInput" placeholder="e.g., DN6 0QA">
+<button onclick="checkPostcode()">Check</button>
 
-<main>
-
-<h1>External Property Makeover Estimate Calculator</h1>
-
-<p class="small">
-This calculator is for our full external property services. Only the core property details are required — all services below are optional. You can select one or more services.
-</p>
-
-<h2>Property Details</h2>
-
-<label for="propertyType">Property Type</label>
-<select id="propertyType" required>
-<option value="">-- Select --</option>
-<option value="bungalow">Bungalow</option>
-<option value="terraced">Terraced</option>
-<option value="semi">Semi-detached</option>
-<option value="detached">Detached</option>
-</select>
-
-<label for="bedrooms">Number of Bedrooms</label>
-<select id="bedrooms" required>
-<option value="">-- Select --</option>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-<option value="4">4</option>
-<option value="5+">5+</option>
-</select>
-
-<label for="conservatory">UPVC Conservatory</label>
-<select id="conservatory" required>
-<option value="">-- Select --</option>
-<option value="yes">Yes</option>
-<option value="no">No</option>
-</select>
-
-<label for="storeys">Number of Storeys</label>
-<select id="storeys" required>
-<option value="1">1</option>
-<option value="2">2</option>
-<option value="3">3</option>
-</select>
-
-<h2>Optional Services</h2>
-
-<h3 class="optional-title">Exterior Painting (Optional)</h3>
-<p class="small">Leave blank if painting is not required.</p>
-<details>
-<summary>More about Exterior Painting</summary>
-<p>We provide professional exterior painting for your property. This includes surface preparation, priming, and application of weather-resistant paint. We cover all elevations and provide colour advice to enhance kerb appeal.</p>
-<p>Optional extras include: textured finishes, protective coatings, and maintenance tips to prolong the life of your paintwork.</p>
-</details>
-
-<label for="front">Front property width (m)</label>
-<input type="number" id="front" step="0.1">
-<label for="rear">Rear property width (m)</label>
-<input type="number" id="rear" step="0.1">
-<label for="sideLeft">Left property width (m)</label>
-<input type="number" id="sideLeft" step="0.1">
-<label for="sideRight">Right property width (m)</label>
-<input type="number" id="sideRight" step="0.1">
-
-<label for="surface">Wall Surface For Painting</label>
-<select id="surface">
-<option value="18">Render</option>
-<option value="22">Pebbledash</option>
-<option value="20">Painted brick</option>
-<option value="25">Unpainted brick</option>
-<option value="28">Stone</option>
-</select>
-
-<h3>Access Required</h3>
-<p class="small">Select ladders if unsure!</p>
-<label><input type="radio" name="access" id="accessLadders" value="0" checked> Ladders</label>
-<label><input type="radio" name="access" id="accessTower" value="450"> Scaffold tower</label>
-<label><input type="radio" name="access" id="accessConservatory" value="750"> Scaffold over conservatory</label>
-<label><input type="radio" name="access" id="accessFull" value="1200"> Full scaffold</label>
-
-<h3 class="optional-title">Optional Guttering</h3>
-<p class="small">Measure in metres or large strides under wherever you have guttering.</p>
-<div class="extra-group">
-<label><input type="checkbox" id="gc"> Gutter clearing</label>
-<label for="gcm">Length (m)</label>
-<input type="number" id="gcm">
-<label><input type="checkbox" id="gw"> Gutter & fascia washing</label>
-<label for="gwm">Length (m)</label>
-<input type="number" id="gwm">
-<label><input type="checkbox" id="gr"> Gutter replacement</label>
-<label for="grm">Length (m)</label>
-<input type="number" id="grm">
-</div>
-
-<h3 class="optional-title">Optional UPVC Restoration</h3>
-<div class="extra-group">
-<label><input type="checkbox" id="upvcRestore"> Restore UPVC frames</label>
-<label><input type="checkbox" id="upvcConservatory"> Restore conservatory frames</label>
-<label><input type="checkbox" id="upvcRoof"> Clean conservatory roof</label>
-</div>
-
-<h3 class="optional-title">Optional Pressure Washing</h3>
-<div class="extra-group">
-<label for="pwArea">Total area (m²)</label>
-<input type="number" id="pwArea">
-<label><input type="checkbox" id="pwJet"> Jet washing</label>
-<label><input type="checkbox" id="pwFung"> Fungicide treatment</label>
-<label><input type="checkbox" id="pwScrub"> Hard scrub</label>
-<label><input type="checkbox" id="pwResand"> Re-sanding</label>
-<label><input type="checkbox" id="pwSeal"> Sealing</label>
-</div>
-
-<h3 class="optional-title">Optional Fence Installation</h3>
-<label for="fenceMetres">Fence length (m)</label>
-<input type="number" id="fenceMetres">
-
-<!-- Button placed after the last input -->
-<button onclick="calculateQuote()">Get Fixed Price Estimate</button>
-<div class="result" id="result"></div>
+<div id="result"></div>
 
 <script>
-function calculateQuote(){
-if(!propertyType.value||!bedrooms.value||!conservatory.value||!storeys.value){
-alert("Please complete required property details.");
-return;
-}
-const property=propertyType.value;
-const beds=bedrooms.value==="5+"?5:+bedrooms.value;
-const conserv=conservatory.value;
-const storeysVal=parseInt(storeys.value);
+// Replace this example list with your full 2000+ postcode entries
+const postcodes = {
+"DN60QA": "Delivery available in this area",
+"AB123CD": "No delivery in this area",
+"XYZ987": "Special offer for this postcode"
+// Add your remaining postcodes here in the format:
+// "NORMALIZED_POSTCODE": "Result you want to show"
+};
 
-let paintCost=0;
-const totalLength=(+front.value||0)+(+rear.value||0)+(+sideLeft.value||0)+(+sideRight.value||0);
-if(totalLength>0){
-let area=totalLength*storeysVal*2.5;
-paintCost=(area*parseFloat(surface.value))*0.5;
-if(storeysVal===2)paintCost*=1.15;
-if(storeysVal===3)paintCost*=1.3;
+// Normalize input: remove spaces and make uppercase
+function normalize(input) {
+return input.replace(/\s+/g, '').toUpperCase();
 }
 
-const accessCost=parseFloat(document.querySelector('input[name="access"]:checked').value);
+// Lookup function
+function checkPostcode() {
+const input = document.getElementById('postcodeInput').value;
+const normalized = normalize(input);
+const resultDiv = document.getElementById('result');
 
-let gutterCost=0;
-if(gc.checked)gutterCost+=(+gcm.value||0)*5;
-if(gw.checked)gutterCost+=(+gwm.value||0)*5;
-if(gr.checked)gutterCost+=(+grm.value||0)*15;
-
-let upvcCost=0;
-if(upvcRestore.checked){
-const table={"bungalow-1":30,"terraced-2":40,"semi-2":50,"detached-2":60,"terraced-3":50,"semi-3":60,"detached-3":70};
-upvcCost=table[`${property}-${storeysVal}`]||0;
-if(beds>1)upvcCost+=(beds-1)*10;
-if(conserv==="yes"&&upvcConservatory.checked)upvcCost+=40;
-if(conserv==="yes"&&upvcRoof.checked)upvcCost+=60;
+if(postcodes[normalized]) {
+resultDiv.innerHTML = `<span id="found">${postcodes[normalized]}</span>`;
+} else {
+resultDiv.innerHTML = `<span id="notfound">Postcode not found.</span>`;
+}
 }
 
-let pwCost=0;
-const pwA=+pwArea.value||0;
-if(pwA>0){
-pwCost+=50;
-if(pwJet.checked)pwCost+=pwA*2.75;
-if(pwFung.checked)pwCost+=pwA*0.9;
-if(pwScrub.checked)pwCost+=pwA*0.75;
-if(pwResand.checked)pwCost+=pwA*3.9;
-if(pwSeal.checked)pwCost+=pwA*4.5;
-}
-
-let fenceCost=(+fenceMetres.value||0)*130;
-
-const total=paintCost+accessCost+gutterCost+upvcCost+pwCost+fenceCost;
-
-let breakdown="<table style='width:100%;border-collapse:collapse;'>"+
-"<tr style='background:#ddd;'><th style='padding:8px;text-align:left;'>Service</th><th style='padding:8px;text-align:right;'>Price (£)</th></tr>";
-
-if(paintCost>0) breakdown+=`<tr><td style='padding:8px;'>Painting</td><td style='padding:8px;text-align:right;'>${paintCost.toFixed(0)}</td></tr>`;
-if(accessCost>0) breakdown+=`<tr><td style='padding:8px;'>Access</td><td style='padding:8px;text-align:right;'>${accessCost.toFixed(0)}</td></tr>`;
-if(gutterCost>0) breakdown+=`<tr><td style='padding:8px;'>Guttering</td><td style='padding:8px;text-align:right;'>${gutterCost.toFixed(0)}</td></tr>`;
-if(upvcCost>0) breakdown+=`<tr><td style='padding:8px;'>UPVC Restoration</td><td style='padding:8px;text-align:right;'>${upvcCost.toFixed(0)}</td></tr>`;
-if(pwCost>0) breakdown+=`<tr><td style='padding:8px;'>Pressure Washing</td><td style='padding:8px;text-align:right;'>${pwCost.toFixed(0)}</td></tr>`;
-if(fenceCost>0) breakdown+=`<tr><td style='padding:8px;'>Fence Installation</td><td style='padding:8px;text-align:right;'>${fenceCost.toFixed(0)}</td></tr>`;
-
-breakdown+=`<tr style='font-weight:bold; background:#eee;'><td style='padding:8px;'>Total</td><td style='padding:8px;text-align:right;'>${total.toFixed(0)}</td></tr>`;
-breakdown+="</table>";
-
-document.getElementById("result").innerHTML=breakdown;
-}
+// Allow pressing Enter to trigger lookup
+document.getElementById('postcodeInput')
+.addEventListener('keypress', function(e) {
+if (e.key === 'Enter') checkPostcode();
+});
 </script>
-
-</main>
-
-<!-- FOOTER -->
-<footer style="background:#000; color:#fff; text-align:center; padding:25px 15px; margin-top:40px; font-size:14px;">
-<p>📞 Call 07735 873694</p>
-<div>
-<a href="/services/guttering.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Guttering</a> |
-<a href="/services/pressure-washing.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Pressure Washing</a> |
-<a href="/services/fence-installation.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Fencing</a> |
-<a href="/services/upvc-restoration.html" style="color:#fff; text-decoration:underline; margin:0 6px;">uPVC Restoration</a> |
-<a href="/services/service-areas.html" style="color:#fff; text-decoration:underline; margin:0 6px;">Service Areas</a>
-<br><br>
-<a href="https://www.facebook.com/people/Handyman-services/61584395621256/" target="_blank" rel="noopener" style="color:#fff; text-decoration:underline;">Facebook</a>
-<br><br>
-© Home Repairs 4U | Service Areas, Doncaster
-</div>
-</footer>
 
 </body>
 </html>
