--- a/test.html
+++ b/test.html
@@ -27,6 +27,7 @@ const postcodes = {
 "DN60QA": "Delivery available in this area",
 "AB123CD": "No delivery in this area",
 "XYZ987": "Special offer for this postcode"
+"DN60QB": "Special offer for this postcodeX"
 // Add your remaining postcodes here in the format:
 // "NORMALIZED_POSTCODE": "Result you want to show"
 };
