--- a/test.html
+++ b/test.html
@@ -14,6 +14,7 @@
 const postcodes = {
 "DN60QA": "Works for DN6 0QA",
 "EH101AA": "Works for EH10 1AA"
+"DN4000": "Works for EH10 1AA"
 };
 
 function normalize(v){
